@startuml
' Editor Component

    class PostActivity {
        - EXTRA_CRIME_ID: String
        - mViewPager: ViewPager
        - mPosts: List<Post>
        + <<Intent>> newIntent(Context packageContext, UUID crimeId)
        + <<void>> onCreate(Bundle savedInstanceState)
    }

    class PostFragment {
        - ARG_POST_ID: String
        - mPost: Post
        - mTitleField: EditText
        - mContentField: EditText
        - mPhotoButton: ImageButton
        - mPhotoView: ImageView
        - mPhotoFile: File
        + <<PostFragment>> newInstance(UUID crimeID)
        + <<void>> onCreate(Bundle savedInstanceState)
        + <<void>> onCreateOptionsMenu(Menu menu, MenuInflater inflater)
        + <<void>> onPause()
        + <<View>> onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState)
        + <<void>> onActivityResult(int requestCode, int resultCode, Intent data)
        - <<void>> updatePhotoView()
    }

    class Post {
        - mId: UUID
        - mTitle: String
        - mContent: String
        - mUri: Uri
        + <<UUID>> getId()
        + <<void>> setId(UUID id)
        + <<String>> getTitle()
        + <<void>> setTitle(String title)
        + <<String>> getContent()
        + <<void>> setContent(String content)
        + <<String>> getPhotoFileName()
        + <<Uri>> getUri()
        + <<void>> setUri(Uri uri)
    }

    class PictureUtils {
        + <<Bitmap>> getScaledBitmap(String path, Activity activity)
        - <<Bitmap>> getScaledBitmap(String path, int destWidth, int destHeight)
    }

    namespace ShareComponent {
        class Sharer
    }
    
    PostActivity --> PostFragment
    PostFragment o-- Post
    PostFragment --> PictureUtils
    PostFragment --> Sharer
@enduml
